--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,34 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "declaration": true,
-    "outDir": "./lib",
-    "strict": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+	"compilerOptions": {
+		"incremental": true,
+		"tsBuildInfoFile": "${configDir}/node_modules/.tmp/tsbuildinfo.json",
+		"target": "ESNext",
+		"lib": ["ESNext", "DOM"],
+		"moduleDetection": "force",
+		"module": "Preserve",
+		"moduleResolution": "Bundler",
+		"resolveJsonModule": true,
+		"strict": true,
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"useUnknownInCatchVariables": true,
+		"noEmit": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		"skipLibCheck": true
+	},
+	"include": [
+		"eslint.config.js",
+		"vitest.config.ts",
+		"src/**/*.ts"
+	]
 }
