--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
 		"check": "tsc",
 		"check:watch": "tsc --watch",
 		"lint": "eslint .",
-		"lint:fix": "eslint --fix ."
+		"lint:fix": "eslint --fix .",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^4.2.0",
 		"@typescript-eslint/eslint-plugin": "^8.24.0",
 		"@typescript-eslint/parser": "^8.24.0",
+		"canvas": "^3.1.0",
 		"eslint": "^9.20.1",
-		"typescript": "^5.7.3"
+		"jsdom": "^26.0.0",
+		"typescript": "^5.7.3",
+		"vitest": "^3.0.5"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": ["canvas"]
 	}
 }
