--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
 	"sideEffects": false,
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.cjs"
+			"import": {
+				"types": "./dist/index.d.mts",
+				"default": "./dist/index.mjs"
+			},
+			"require": {
+				"types": "./dist/index.d.cts",
+				"default": "./dist/index.cjs"
+			}
 		},
 		"./package.json": "./package.json"
 	},
@@ -32,6 +37,8 @@
 		"dist"
 	],
 	"scripts": {
+		"attw": "attw --pack . --ignore-rules no-resolution",
+		"api-extractor": "api-extractor run --local --verbose",
 		"build": "unbuild",
 		"check": "tsc",
 		"check:watch": "tsc --watch",
@@ -41,6 +48,8 @@
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^4.2.0",
+		"@arethetypeswrong/cli": "^0.17.3",
+		"@microsoft/api-extractor": "^7.49.2",
 		"@typescript-eslint/eslint-plugin": "^8.24.0",
 		"@typescript-eslint/parser": "^8.24.0",
 		"canvas": "^3.1.0",
