--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
 		"check:watch": "tsc --watch",
 		"lint": "eslint .",
 		"lint:fix": "eslint --fix .",
-		"test": "vitest"
+		"test": "vitest run",
+		"test:watch": "vitest watch",
+		"test:ci": "vitest run --coverage --bail 1"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^4.2.0",
@@ -52,6 +54,7 @@
 		"@microsoft/api-extractor": "^7.49.2",
 		"@typescript-eslint/eslint-plugin": "^8.24.0",
 		"@typescript-eslint/parser": "^8.24.0",
+		"@vitest/coverage-v8": "^3.0.5",
 		"canvas": "^3.1.0",
 		"eslint": "^9.20.1",
 		"jsdom": "^26.0.0",
