feat: convert to monorepo

--- a/package.json
+++ b/package.json
@@ -1,70 +1,6 @@
 {
-	"name": "@yorganci/image-tool",
-	"type": "module",
-	"version": "0.0.1",
-	"packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b",
-	"description": "HTML canvas-based TypeScript image manipulation library. ",
-	"author": {
-		"name": "Atahan Yorgancı",
-		"email": "atahanyorganci@hotmail.com"
-	},
+	"name": "@yorganci/image-tool-monorepo",
+	"private": true,
 	"license": "BSD-3-Clause-Clear",
-	"homepage": "https://github.com/atahanyorganci/image-tool",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/atahanyorganci/image-tool.git"
-	},
-	"bugs": {
-		"url": "https://github.com/atahanyorganci/image-tool/issues"
-	},
-	"sideEffects": false,
-	"exports": {
-		".": {
-			"import": {
-				"types": "./dist/index.d.mts",
-				"default": "./dist/index.mjs"
-			},
-			"require": {
-				"types": "./dist/index.d.cts",
-				"default": "./dist/index.cjs"
-			}
-		},
-		"./package.json": "./package.json"
-	},
-	"main": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
-	"files": [
-		"dist"
-	],
-	"scripts": {
-		"attw": "attw --pack . --ignore-rules no-resolution",
-		"api-extractor": "api-extractor run --local --verbose",
-		"build": "unbuild",
-		"check": "tsc",
-		"check:watch": "tsc --watch",
-		"lint": "eslint .",
-		"lint:fix": "eslint --fix .",
-		"test": "vitest run",
-		"test:watch": "vitest watch",
-		"test:ci": "vitest run --coverage --bail 1"
-	},
-	"devDependencies": {
-		"@antfu/eslint-config": "^4.2.0",
-		"@arethetypeswrong/cli": "^0.17.3",
-		"@microsoft/api-extractor": "^7.49.2",
-		"@typescript-eslint/eslint-plugin": "^8.24.0",
-		"@typescript-eslint/parser": "^8.24.0",
-		"@vitest/coverage-v8": "^3.0.5",
-		"canvas": "^3.1.0",
-		"eslint": "^9.20.1",
-		"jsdom": "^26.0.0",
-		"typescript": "^5.7.3",
-		"unbuild": "^3.3.1",
-		"vitest": "^3.0.5"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"canvas"
-		]
-	}
+	"packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
 }
