--- a/packages/image-tool/package.json
+++ b/packages/image-tool/package.json
@@ -21,8 +21,8 @@
 	"exports": {
 		".": {
 			"import": {
-				"types": "./dist/index.d.mts",
-				"default": "./dist/index.mjs"
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
 			},
 			"require": {
 				"types": "./dist/index.d.cts",
@@ -31,7 +31,7 @@
 		},
 		"./package.json": "./package.json"
 	},
-	"main": "./dist/index.mjs",
+	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"files": [
 		"dist"
@@ -39,7 +39,7 @@
 	"scripts": {
 		"attw": "attw --pack . --ignore-rules no-resolution",
 		"api-extractor": "api-extractor run --local --verbose",
-		"build": "unbuild",
+		"build": "tsup",
 		"check": "tsc",
 		"check:watch": "tsc --watch",
 		"lint": "eslint .",
@@ -58,8 +58,8 @@
 		"canvas": "^3.1.0",
 		"eslint": "^9.20.1",
 		"jsdom": "^26.0.0",
+		"tsup": "^8.3.6",
 		"typescript": "^5.7.3",
-		"unbuild": "^3.3.1",
 		"vitest": "^3.0.5"
 	},
 	"pnpm": {
