--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
 	"name": "@yorganci/image-tool-monorepo",
 	"private": true,
+	"packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b",
 	"license": "BSD-3-Clause-Clear",
-	"packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
+	"scripts": {
+		"build": "turbo build",
+		"check": "turbo check",
+		"lint": "turbo lint",
+		"lint:fix": "turbo lint:fix",
+		"turbo": "turbo"
+	},
+	"devDependencies": {
+		"turbo": "^2.4.1"
+	}
 }
