--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
 		"check": "turbo check",
 		"lint": "turbo lint",
 		"lint:fix": "turbo lint:fix",
+		"format": "eslint .",
+		"format:fix": "eslint --fix .",
 		"turbo": "turbo"
 	},
 	"devDependencies": {
+		"@yorganci/image-tool-eslint-config": "workspace:*",
+		"eslint": "^9.20.1",
 		"turbo": "^2.4.1"
 	}
 }
