--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"tasks": {
+		"//#format": {},
 		"check": {
 			"inputs": ["src/**/*.ts"]
 		},
@@ -8,7 +9,9 @@
 			"cache": false,
 			"persistent": true
 		},
-		"lint": {},
+		"lint": {
+			"dependsOn": ["//#format"]
+		},
 		"lint:fix": {
 			"cache": false
 		},
