--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
 		"@yorganci/image-tool-eslint-config": "workspace:*",
 		"eslint": "^9.20.1",
 		"turbo": "^2.4.1"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"canvas"
+		]
 	}
 }
