feat: initialize `vite` website with React

--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,8 @@
 			"dependsOn": ["check", "lint"]
 		},
 		"check": {
-			"inputs": ["src/**/*.ts"]
+			"dependsOn": ["^build"],
+			"inputs": ["src/**/*"]
 		},
 		"check:watch": {
 			"cache": false,
