--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,11 +15,14 @@
 	},
 	"dependencies": {
 		"@antfu/eslint-config": "^3.11.2",
-		"@eslint-react/eslint-plugin": "^1.17.1",
+		"@eslint-react/eslint-plugin": "^1.26.2",
 		"@yorganci/image-tool-tsconfig": "workspace:*",
 		"eslint": "^9.20.1",
 		"eslint-flat-config-utils": "^1.1.0",
 		"eslint-plugin-format": "^0.1.2",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"tailwindcss": "^4.0.6",
 		"typescript": "^5.7.3"
 	}
 }
