--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
 		"clsx": "^2.1.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.5",
 		"tailwind-merge": "^3.0.1"
 	},
 	"devDependencies": {
