--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,8 +13,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.0.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.0.6",
