--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,6 +16,8 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dexie": "^4.0.11",
+		"dexie-react-hooks": "^1.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
