--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.2",
+		"@tanstack/react-router": "^1.105.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.11",
@@ -25,6 +26,8 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.0.6",
+		"@tanstack/router-devtools": "^1.105.0",
+		"@tanstack/router-plugin": "^1.105.0",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
 		"@vitejs/plugin-react": "^4.3.4",
