--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@tabler/icons-react": "^3.30.0",
 		"@tanstack/react-router": "^1.105.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -22,7 +24,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
-		"tailwind-merge": "^3.0.1"
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.0.6",
