--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,7 @@
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
 		"@vitejs/plugin-react": "^4.3.4",
+		"@yorganci/image-tool": "workspace:*",
 		"@yorganci/image-tool-eslint-config": "workspace:*",
 		"@yorganci/image-tool-tsconfig": "workspace:*",
 		"eslint": "^9.19.0",
