--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tabler/icons-react": "^3.30.0",
 		"@tanstack/react-router": "^1.105.0",
 		"class-variance-authority": "^0.7.1",
