--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tabler/icons-react": "^3.30.0",
 		"@tanstack/react-router": "^1.105.0",
+		"@xstate/store": "^3.0.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.11",
