--- a/packages/image-tool/package.json
+++ b/packages/image-tool/package.json
@@ -42,6 +42,7 @@
 		"build": "tsup",
 		"check": "tsc",
 		"check:watch": "tsc --watch",
+		"dev": "tsup --watch",
 		"lint": "eslint .",
 		"lint:fix": "eslint --fix .",
 		"test": "vitest run",
