--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
 		"clsx": "^2.1.1",
 		"dexie": "^4.0.11",
 		"dexie-react-hooks": "^1.1.7",
+		"re-resizable": "^6.10.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
