--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,7 +31,8 @@
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.0.6",
