--- a/packages/image-tool/package.json
+++ b/packages/image-tool/package.json
@@ -21,8 +21,8 @@
 	"exports": {
 		".": {
 			"import": {
-				"types": "./dist/index.d.ts",
-				"default": "./dist/index.js"
+				"types": "./dist/index.d.mts",
+				"default": "./dist/index.mjs"
 			},
 			"require": {
 				"types": "./dist/index.d.cts",
@@ -31,18 +31,16 @@
 		},
 		"./package.json": "./package.json"
 	},
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
 	"files": [
 		"dist"
 	],
 	"scripts": {
 		"attw": "attw --pack . --ignore-rules no-resolution",
 		"api-extractor": "api-extractor run --local --verbose",
-		"build": "tsup",
+		"build": "unbuild",
 		"check": "tsc",
 		"check:watch": "tsc --watch",
-		"dev": "tsup --watch",
+		"dev": "unbuild --watch",
 		"lint": "eslint .",
 		"lint:fix": "eslint --fix .",
 		"test": "vitest run",
@@ -59,8 +57,8 @@
 		"canvas": "^3.1.0",
 		"eslint": "^9.20.1",
 		"jsdom": "^26.0.0",
-		"tsup": "^8.3.6",
 		"typescript": "^5.7.3",
+		"unbuild": "^3.4.0",
 		"vitest": "^3.0.5"
 	}
 }
