--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -44,10 +44,10 @@
 		"@yorganci/image-tool": "workspace:*",
 		"@yorganci/image-tool-eslint-config": "workspace:*",
 		"@yorganci/image-tool-tsconfig": "workspace:*",
-		"eslint": "^9.19.0",
+		"eslint": "^9.28.0",
 		"globals": "^15.14.0",
 		"tailwindcss": "^4.0.6",
-		"typescript": "~5.7.2",
+		"typescript": "^5.8.3",
 		"vite": "^6.1.0"
 	}
 }
