--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@antfu/eslint-config": "^3.11.2",
 		"@eslint-react/eslint-plugin": "^1.26.2",
+		"@yorganci/eslint-plugin-tailwindcss": "^0.0.1",
 		"@yorganci/image-tool-tsconfig": "workspace:*",
 		"eslint": "^9.28.0",
 		"eslint-flat-config-utils": "^1.1.0",
